# WordGameProject

./: pyproject.toml  wordgametest.py
