[project]
name = "wordgameproject"
version = "0.1.0"
description = ""
authors = [
    {name = "simmy chethelen",email = "simmyabi13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
mysql-connector-python = "^8.0"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "mysql (>=0.0.3,<0.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
